--- a/helm/codecov-enterprise/templates/web-deployment.yaml
+++ b/helm/codecov-enterprise/templates/web-deployment.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -5,62 +6,103 @@ metadata:
   {{- range $key, $val := .Values.tags }}
     {{ $key }}: {{ $val | quote }}
   {{- end }}
+  {{- range $key, $val := .Values.web.deployment.annotations }}
+    {{ $key }}: {{ $val | quote }}
+  {{- end }}
   name: web
+  labels:
+    chart: {{ .Chart.Name }}
+    release: {{ .Release.Name | quote }}
+    {{- range $key, $value := .Values.labels }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
 spec:
-  replicas: {{ .Values.web.replicas }}
+  replicas: {{ .Values.web.deployment.replicas }}
   selector:
     matchLabels:
-      app: web
+      app: {{ .Values.web.name }}
   strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
+  {{ toYaml .Values.worker.deployment.updateStrategy | indent 4 }}
   template:
     metadata:
       labels:
-        app: web
+        app: {{ .Values.web.name }}
+        release: {{ .Release.Name | quote }}
       annotations:
-      {{- range $key, $value := .Values.web.annotations }}
+      {{- range $key, $val := .Values.tags }}
+        {{ $key }}: {{ $val | quote }}
+      {{- end }}
+      {{- range $key, $value := .Values.web.deployment.annotations }}
         {{ $key }}: {{ $value | quote }}
       {{- end }}
     spec:
+      {{- if .Values.podSecurityContext }}
+      securityContext:
+      {{ toYaml .Values.podSecurityContext | indent 10 }}
+      {{- end }}
+      {{- with .Values.web.deployment.nodeSelector }}
+      nodeSelector:
+      {{ toYaml . | indent 8 }}
+      {{- end }}
+      {{- with .Values.web.deployment.affinity }}
+      affinity:
+      {{ toYaml . | indent 8 }}
+      {{- end }}
+      {{- with .Values.web.deployment.tolerations }}
+      tolerations:
+      {{ toYaml . | indent 8 }}
+      {{- end }}
+      {{- if .Values.imagePullSecrets }}
+      imagePullSecrets:
+      {{ toYaml .Values.imagePullSecrets | indent 8 }}
+      {{- end }}
       containers:
-      - image: {{ .Values.web.image }}:{{ .Values.codecovVersion }}
-        imagePullPolicy: Always
-        name: web
+      {{- with .Values.extraEnvs }}
+      - env:
+        {{ toYaml . | nindent 10 }}
+      {{- end }}
+      {{- if .Values.envFrom }}
+        envFrom:
+        {{ toYaml .Values.envFrom | indent 10 }}
+      {{- end }}
+        image: {{ .Values.web.image }}:{{ .Values.codecovVersion }}
+        imagePullPolicy: "{{ .Values.imagePullPolicy }}"
+        name: {{ .Values.web.name }}
         ports:
-        - containerPort: 5000
+        - containerPort: {{ .Values.web.deployment.port }}
           protocol: TCP
+          name: http
+        livenessProbe:
+        {{ toYaml .Values.web.deployment.livenessProbe | indent 10 }}
         readinessProbe:
-          failureThreshold: 3
-          httpGet:
-            path: /login
-            port: 5000
-            scheme: HTTP
-          initialDelaySeconds: 5
-          periodSeconds: 5
-          successThreshold: 1
-          timeoutSeconds: 1
-        resources: 
-          limits:
-            cpu: {{ .Values.web.resources.limits.cpu }}
-            memory: {{ .Values.web.resources.limits.memory }}
-          requests:
-            cpu: {{ .Values.web.resources.requests.cpu }}
-            memory: {{ .Values.web.resources.requests.memory }}
+        {{ toYaml .Values.web.deployment.readinessProbe | indent 10 }}
+        resources:
+        {{ toYaml .Values.web.deployment.resources | indent 10 }}
         volumeMounts:
+        {{- range .Values.secretMounts }}
+          - name: {{ .name }}
+            mountPath: {{ .path }}
+            {{- if .subPath }}
+            subPath: {{ .subPath }}
+            {{- end }}
+        {{- end }}
         - mountPath: /config
           name: codecov-yml
           readOnly: true
-        - mountPath: /cert
-          name: scm-ca-cert
-          readOnly: true
       restartPolicy: Always
       volumes:
+      {{- range .Values.secretMounts }}
+      - name: {{ .name }}
+        secret:
+          secretName: {{ .secretName }}
+      {{- end }}
       - name: codecov-yml
-        secret:
-          secretName: codecov-yml
-      - name: scm-ca-cert
-        secret:
-          secretName: scm-ca-cert
+        configMap:
+          name: {{ .Values.configmap.name }}
+          defaultMode: 420
+      {{- if .Values.extraVolumes }}
+      {{ toYaml .Values.extraVolumes | indent 8 }}
+      {{- end }}
+  {{- if .Values.extraVolumes }}
+  {{ toYaml .Values.extraVolumeMounts | indent 10 }}
+  {{- end }}
