--- a/helm/codecov-enterprise/templates/web-service.yaml
+++ b/helm/codecov-enterprise/templates/web-service.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 kind: Service
 metadata:
@@ -5,12 +6,23 @@ metadata:
   {{- range $key, $val := .Values.tags }}
     {{ $key }}: {{ $val | quote }}
   {{- end }}
-  name: web
+  {{- range $key, $val := .Values.web.service.annotations }}
+    {{ $key }}: {{ $val | quote }}
+  {{- end }}
+  name: {{ .Values.web.name }}
+  labels:
+    chart: {{ .Chart.Name }}
+    release: {{ .Release.Name | quote }}
+    heritage: {{ .Release.Service }}
+    {{- range $key, $value := .Values.labels }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
 spec:
   ports:
-  - port: 5000
+  - port: {{ .Values.web.service.port }}
     protocol: TCP
-    targetPort: 5000
+    targetPort: {{ .Values.web.deployment.port }}
+    name: http
   selector:
-    app: web
-  type: NodePort
+    app: {{ .Values.web.name }}
+  type: {{ .Values.web.service.type }}
