--- a/helm/codecov-enterprise/templates/worker-deployment.yaml
+++ b/helm/codecov-enterprise/templates/worker-deployment.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -5,46 +6,98 @@ metadata:
   {{- range $key, $val := .Values.tags }}
     {{ $key }}: {{ $val | quote }}
   {{- end }}
-  name: worker
+  {{- range $key, $val := .Values.worker.deployment.annotations }}
+    {{ $key }}: {{ $val | quote }}
+  {{- end }}
+  name: {{ .Values.worker.name }}
+  labels:
+    chart: {{ .Chart.Name }}
+    release: {{ .Release.Name | quote }}
+    {{- range $key, $value := .Values.labels }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
 spec:
-  replicas: {{ .Values.worker.replicas }}
+  replicas: {{ .Values.worker.deployment.replicas }}
   selector:
     matchLabels:
-      app: worker
+      app: {{ .Values.worker.name }}
   strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
+  {{ toYaml .Values.worker.deployment.updateStrategy | indent 4 }}
   template:
     metadata:
       labels:
-        app: worker
+        app: {{ .Values.worker.name }}
+        release: {{ .Release.Name | quote }}
       annotations:
-      {{- range $key, $value := .Values.worker.annotations }}
+      {{- range $key, $val := .Values.tags }}
+        {{ $key }}: {{ $val | quote }}
+      {{- end }}
+      {{- range $key, $value := .Values.worker.deployment.annotations }}
         {{ $key }}: {{ $value | quote }}
       {{- end }}
     spec:
+      {{- if .Values.podSecurityContext }}
+      securityContext:
+      {{ toYaml .Values.podSecurityContext | indent 10 }}
+      {{- end }}
+      {{- with .Values.worker.deployment.nodeSelector }}
+      nodeSelector:
+      {{ toYaml . | indent 8 }}
+      {{- end }}
+      {{- with .Values.worker.deployment.affinity }}
+      affinity:
+      {{ toYaml . | indent 8 }}
+      {{- end }}
+      {{- with .Values.worker.deployment.tolerations }}
+      tolerations:
+      {{ toYaml . | indent 8 }}
+      {{- end }}
+      {{- if .Values.imagePullSecrets }}
+      imagePullSecrets:
+      {{ toYaml .Values.imagePullSecrets | indent 8 }}
+      {{- end }}
       containers:
-      - args:
-        - worker
-        - --queue celery,uploads
-        - --concurrency 1
+      {{- with .Values.extraEnvs }}
+      - env:
+        {{ toYaml . | nindent 10 }}
+      {{- end }}
+      {{- if .Values.envFrom }}
+        envFrom:
+        {{ toYaml .Values.envFrom | indent 10 }}
+      {{- end }}
+        args:
+        {{- range $val := .Values.worker.deployment.args }}
+          - {{ $val | quote }}
+        {{- end }}
         image: {{ .Values.worker.image }}:{{ .Values.codecovVersion }}
-        imagePullPolicy: Always
-        name: workers
+        imagePullPolicy: "{{ .Values.imagePullPolicy }}"
+        name: {{ .Values.worker.name }}
         resources:
-          limits: 
-            cpu: {{ .Values.worker.resources.limits.cpu }}
-            memory: {{ .Values.worker.resources.limits.memory }}
-          requests:
-            cpu: {{ .Values.worker.resources.requests.cpu }}
-            memory: {{ .Values.worker.resources.requests.memory }}
+        {{ toYaml .Values.worker.deployment.resources | indent 10 }}
         volumeMounts:
+        {{- range .Values.secretMounts }}
+        - name: {{ .name }}
+          mountPath: {{ .path }}
+          {{- if .subPath }}
+          subPath: {{ .subPath }}
+          {{- end }}
+        {{- end }}
         - mountPath: /config
           name: codecov-yml
           readOnly: true
       volumes:
-      - name: codecov-yml
+      {{- range .Values.secretMounts }}
+      - name: {{ .name }}
         secret:
-          secretName: codecov-yml
+          secretName: {{ .secretName }}
+      {{- end }}
+      - name: codecov-yml
+        configMap:
+          name: {{ .Values.configmap.name }}
+          defaultMode: 420
+    {{- if .Values.extraVolumes }}
+    {{ toYaml .Values.extraVolumes | indent 8 }}
+    {{- end }}
+  {{- if .Values.extraVolumes }}
+  {{ toYaml .Values.extraVolumeMounts | indent 10 }}
+  {{- end }}
